Еволюція кожного острова відбувається послідовно